assets/css/headerstyle.css
@import url(https://fonts.googleapis.com/css?family=Merriweather+Sans);
.navbar-default {
  background-color: #f72c25;
  border-color: #2d1e2f;
}
.navbar-default .navbar-brand {
  color: #fbfffe;
}
.navbar-default .navbar-brand:hover,
.navbar-default .navbar-brand:focus {
  color: #ffc62b;
}
.navbar-default .navbar-text {
  color: #fbfffe;
}
.navbar-default .navbar-nav > li > a {
  color: #fbfffe;
}
.navbar-default .navbar-nav > li > a:hover,
.navbar-default .navbar-nav > li > a:focus {
  color: #ffc62b;
}
.navbar-default .navbar-nav > li > .dropdown-menu {
  background-color: #f72c25;
}
.navbar-default .navbar-nav > li > .dropdown-menu > li > a {
  color: #fbfffe;
}
.navbar-default .navbar-nav > li > .dropdown-menu > li > a:hover,
.navbar-default .navbar-nav > li > .dropdown-menu > li > a:focus {
  color: #ffc62b;
  background-color: #2d1e2f;
}
.navbar-default .navbar-nav > li > .dropdown-menu > li > .divider {
  background-color: #2d1e2f;
}
.navbar-default .navbar-nav .open .dropdown-menu > .active > a,
.navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
.navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
  color: #ffc62b;
  background-color: #2d1e2f;
}
.navbar-default .navbar-nav > .active > a,
.navbar-default .navbar-nav > .active > a:hover,
.navbar-default .navbar-nav > .active > a:focus {
  color: #ffc62b;
  background-color: #2d1e2f;
}
.navbar-default .navbar-nav > .open > a,
.navbar-default .navbar-nav > .open > a:hover,
.navbar-default .navbar-nav > .open > a:focus {
  color: #ffc62b;
  background-color: #2d1e2f;
}
.navbar-default .navbar-toggle {
  border-color: #2d1e2f;
}
.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus {
  background-color: #2d1e2f;
}
.navbar-default .navbar-toggle .icon-bar {
  background-color: #fbfffe;
}
.navbar-default .navbar-collapse,
.navbar-default .navbar-form {
  border-color: #fbfffe;
}
.navbar-default .navbar-link {
  color: #fbfffe;
}
.navbar-default .navbar-link:hover {
  color: #ffc62b;
}

@media (max-width: 839px) {
  .navbar-default .navbar-nav .open .dropdown-menu > li > a {
    color: #fbfffe;
  }
  .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover,
  .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
    color: #ffc62b;
  }
  .navbar-default .navbar-nav .open .dropdown-menu > .active > a,
  .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover,
  .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
    color: #ffc62b;
    background-color: #2d1e2f;
  }
}
.social-wrap button {
    padding-right: 45px;
    height: 35px;
    background: none;
    border: none;
    display: block;
    background-size: 35px 35px;
    background-position: right center;
    background-repeat: no-repeat;
    border-radius: 4px;
    color: white;
    font-family:"Merriweather Sans", sans-serif;
    font-size: 14px;
    margin-bottom: 15px;
    width: 205px;
    border-bottom: 2px solid transparent;
    border-left: 1px solid transparent;
    border-right: 1px solid transparent;
    box-shadow: 0 4px 2px -2px gray;
    text-shadow: rgba(0, 0, 0, .5) -1px -1px 0;
}
button#facebook {
    border-color: #2d5073;
    background-color: #3b5998;
    background-image: url(https://spicymemes.cs.ut.ee/assets/facebook-icon.png);
}
button#facebook:hover {
  background-color: #4563B3;
}
button#facebook:active {
  background-color: #32508a;
}

